# bevy_aabb_instancing

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release.yml
examples/: bloom.rs  noise.rs  wave.rs
src/: clipping_planes.rs  color_options.rs  component.rs  cuboids.rs  lib.rs  material.rs  vertex_pulling.rs
src/vertex_pulling/: buffer_cache.rs  buffers.rs  cuboid_cache.rs  draw.rs  extract.rs  graph_node.rs  index_buffer.rs  lib.rs  mipmap_gen.wgsl  pass_node.rs  pipeline.rs  plugin.rs  prepare.rs  primitive_visibility.rs  queue.rs  vertex_pulling.wgsl  view.rs  visibility_counting.wgsl
