[package]
name = "bevy-aabb-instancing"
version = "0.7.0"
edition = "2021"
description = "Render millions of AABB instances in Bevy."
keywords = ["bevy", "aabb", "cube", "instancing", "render"]
license = "Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy-aabb-instancing/"

[features]
trace = ["bevy/trace_chrome"]

[dependencies.bevy]
path = "../bevy"
default-features = false
features = ["bevy_asset", "bevy_core_pipeline", "bevy_render", "x11"]

[patch."crates-io"]
bevy = { path = "../bevy" }

[dev-dependencies]
rand = "0.8"
smooth-bevy-cameras = { git = "https://github.com/olegomon/smooth-bevy-cameras" }
