[package]
name = "bevy-aabb-instancing"
version = "0.9.0"
edition = "2021"
description = "Render millions of AABB instances in Bevy."
authors = [
    "Duncan Fairbanks <duncan.fairbanks@foresightmining.com>",
    "Zhixing Zhang <zhixing.zhang@foresightmining.com>"
]
keywords = ["bevy", "aabb", "cube", "instancing", "render"]
license = "Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy-aabb-instancing/"

[features]
trace = ["bevy/trace_chrome"]

[dependencies.bevy]
version = "0.11.0"
default-features = false
features = ["bevy_asset", "bevy_core_pipeline", "bevy_render", "x11"]

[dev-dependencies]
rand = "0.8"
smooth-bevy-cameras = "0.9.0"

[[example]]
name = "wave"
path = "examples/wave.rs"

[[example]]
name = "bloom"
path = "examples/bloom.rs"
required-features = ["bevy/ktx2", "bevy/tonemapping_luts", "bevy/zstd"]
